--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-    <title>Spring Security Example</title>
+    <title>User Page</title>
 </head>
+<link th:href="@{/css/styles.css}" rel="stylesheet"/>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-
-
+<div class="root">
+    <div class="main">
+        <table>
+            <tr>
+                <th>Username</th>
+                <td th:text="${user.getUsername()}"></td>
+            </tr>
+            <tr>
+                <th>First Name</th>
+                <td th:text="${user.getFirstName()}"></td>
+            </tr>
+            <tr>
+                <th>Last Name</th>
+                <td th:text="${user.getLastName()}"></td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td th:text="${user.getEmail()}"></td>
+            </tr>
+        </table>
+    </div>
+    <div th:replace="fragments/sidebar.html :: sidebar"></div>
+</div>
 </body>
 </html>
